@@ -94,7 +94,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        
+        <dependency>
+            <groupId>com.github.sarxos</groupId>
+            <artifactId>webcam-capture</artifactId>
+            <version>0.3.12</version>
+        </dependency>
+
     </dependencies>
     <build>
         <resources>
@@ -138,6 +143,12 @@
                         <id>debug</id>
                         <configuration>
                             <options>
+                                <option>--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
+                                <option>--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
+                                <option>--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix</option>
+                                <option>--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
+                                <option>--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix</option>
+                                <option>--add-opens=java.base/java.lang.reflect=com.jfoenix</option>
                                 <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=localhost:8000</option>
                             </options>
                         </configuration>
@@ -147,6 +158,12 @@
                         <id>ide-debug</id>
                         <configuration>
                             <options>
+                                <option>--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
+                                <option>--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
+                                <option>--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix</option>
+                                <option>--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
+                                <option>--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix</option>
+                                <option>--add-opens=java.base/java.lang.reflect=com.jfoenix</option>
                                 <option>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
                             </options>
                         </configuration>
